syntax = "proto3";

package greet;

service GreetService {
  // unary API
  // rpc MethodName (Request) returns (Response);
  rpc Greet (GreetRequest) returns (GreetResponse) {};

    // Server streaming API
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // Server streaming API
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};
}

message Greeting { 
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}
